sonarqube/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: "registry.redhat.io/rhel8/postgresql-12"
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
          - name: postgres-data
            mountPath: /var/lib/postgresql/data
            subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        storageClassName: lvms-vg1
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
